# mochi-streaming-pipeline

./: CMakeLists.txt  PLAN.md  README.md  spack.yaml
.github/workflows/: ci.yaml  coverage.yaml
configs/: config_template.yaml  default.yaml  high_throughput.yaml  passthrough.yaml  rpc_only.yaml  strong_consistency.yaml  test_mixed_modes.yaml  test_small.yaml  test_uring.yaml  tiny_test.yaml
search/: README.md  __init__.py  analyze.py  launcher.py  problem.py  run_function.py  search.py  search_template.yaml
search/launchers/: mpich.yaml
src/: main.cpp
src/broker/: broker_provider.cpp  broker_provider.hpp
src/common/: batch.hpp  buffer_pool.cpp  buffer_pool.hpp  config.cpp  config.hpp  timing.hpp
src/receiver/: receiver_provider.cpp  receiver_provider.hpp
src/sender/: sender_provider.cpp  sender_provider.hpp
tests/: CMakeLists.txt  ack_on_receive.yaml  high_concurrency.yaml  large_batches.yaml  mixed_rdma_to_rpc.yaml  mixed_rpc_to_rdma.yaml  no_checksum.yaml  rdma_direct_basic.yaml  rdma_registered_basic.yaml  rpc_inline_basic.yaml  small_messages.yaml  spack.yaml  strategy_forward_immediate.yaml  strategy_passthrough.yaml  strategy_reload_from_file.yaml
tests/unit/: test_search.py
